--- a/jellyfin-rpc/Cargo.toml
+++ b/jellyfin-rpc/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "jellyfin-rpc"
-version     = "1.3.3"
+version     = "1.3.4"
 edition     = "2021"
 description = "Backend for the Jellyfin-RPC-cli and Jellyfin-RPC-Iced projects"
 license     = "GPL-3.0-or-later"
@@ -19,5 +19,5 @@ version  = "1.0"
 
 [dependencies.reqwest]
 default-features = false
-features         = ["rustls-tls", "json", "blocking"]
+features         = ["rustls-tls", "json", "multipart", "blocking"]
 version          = "0.12"
